--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -11,18 +11,18 @@
 
           </div>
           <div class="card-body">
-            <form>
+            <form #f="ngForm" (ngSubmit)="onLogin(f.value)">
               <div class="form-group">
                 <label for="exampleInputEmail1">Username</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                <input type="email" class="form-control" id="exampleInputEmail1" name="username" ngModel aria-describedby="emailHelp"
                   placeholder="Entrer votre usernam">
               </div>
               <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control " id="exampleInputPassword1" placeholder="Password">
+                <input type="password" class="form-control " id="exampleInputPassword1" ngModel name="password" placeholder="Password">
               </div>
 
-              <button type="button" class="btn btn-lightning">Connecxion</button>
+              <button type="submit" class="btn btn-lightning">Connecxion</button>
             </form>
           </div>
 
