--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -64,8 +64,10 @@
       </li>
     </ul>
 
+
+
     <div class="view-source mb-3">
-     
+      <a (click)="logOut()" class="btn btn-block btn-lightning rounded-0">Deconnecxion</a>
     </div>
   </nav>
 </aside>
