--- a/src/app/components/sidebaruser/sidebaruser.component.html
+++ b/src/app/components/sidebaruser/sidebaruser.component.html
@@ -44,7 +44,7 @@
           <span> Liste des Transactions</span>
         </a>
       </li>
-      
+
       <li>
         <a href="#" routerLink="/maps" routerLinkActive="active">
           <i class="fa fa-globe"></i>
@@ -58,9 +58,8 @@
         </a>
       </li>
     </ul>
-
     <div class="view-source mb-3">
-
+      <a (click)="logOut()" class="btn btn-block btn-lightning rounded-0">Deconnecxion</a>
     </div>
   </nav>
 </aside>
