--- a/src/app/components/sidebaradminp/sidebaradminp.component.html
+++ b/src/app/components/sidebaradminp/sidebaradminp.component.html
@@ -44,7 +44,7 @@
           <span> Liste des Users</span>
         </a>
       </li>
-     
+
       <li>
         <a href="#" routerLink="/maps" routerLinkActive="active">
           <i class="fa fa-globe"></i>
@@ -60,7 +60,7 @@
     </ul>
 
     <div class="view-source mb-3">
-
+      <a (click)="logOut()" class="btn btn-block btn-lightning rounded-0">Deconnecxion</a>
     </div>
   </nav>
 </aside>
