--- a/src/app/components/sidebarcaissier/sidebarcaissier.component.html
+++ b/src/app/components/sidebarcaissier/sidebarcaissier.component.html
@@ -36,6 +36,9 @@
       </ul>
 
 
+    <div class="view-source mb-3">
+      <a (click)="logOut()" class="btn btn-block btn-lightning rounded-0">Deconnecxion</a>
+    </div>
     </nav>
   </aside>
 
