avant installation rxjs

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -28,40 +28,36 @@
       </li>
       <li>
         <a href="#" routerLink="/register" routerLinkActive="active">
-          <i class="fas fa-gem"></i>
+          <i class="fas fa-users"></i>
           <span>Ajouter Admin</span>
         </a>
       </li>
       <li>
+        <a href="#" routerLink="/addpartenaire" routerLinkActive="active">
+          <i class="fas fa-user-friends"></i>
+          <span>Ajouter Partenaire</span>
+        </a>
+      </li>
+      <li>
           <a href="#" routerLink="/forms" routerLinkActive="active">
-            <i class="fas fa-gem"></i>
+            <i class="fas fa-money-check"></i>
             <span>Ajouter Compte</span>
           </a>
         </li>
       <li>
         <a href="#" routerLink="/tables" routerLinkActive="active">
           <i class="fa fa-table"></i>
-          <span> Partenaires</span>
+          <span>Liste des Partenaires</span>
         </a>
       </li>
-      <li>
-        <a href="#" routerLink="/typography" routerLinkActive="active">
-          <i class="fa fa-align-center"></i>
-          <span>Typography</span>
-        </a>
-      </li>
+     
       <li>
         <a href="#" routerLink="/maps" routerLinkActive="active">
           <i class="fa fa-globe"></i>
           <span>Localisation </span>
         </a>
       </li>
-      <li>
-        <a href="#" routerLink="/notifications" routerLinkActive="active">
-          <i class="fas fa-bell"></i>
-          <span>Notifications</span>
-        </a>
-      </li>
+
     </ul>
 
 
