--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -18,6 +18,36 @@
                   placeholder="name@example.com">
               </div>
               <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
+                  placeholder="name@example.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
+                  placeholder="name@example.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
+                  placeholder="name@example.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
+                  placeholder="name@example.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
+                  placeholder="name@example.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
+                  placeholder="name@example.com">
+              </div>
+              <div class="form-group">
                 <label>Custom file input</label>
                 <div class="custom-file">
                   <input type="file" class="custom-file-input" id="customFile">
@@ -34,24 +64,10 @@
                   <option>5</option>
                 </select>
               </div>
-              <div class="form-group">
-                <label for="exampleFormControlSelect2">Example multiple select</label>
-                <select multiple class="form-control rounded-0" id="exampleFormControlSelect2">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlTextarea1">Example textarea</label>
-                <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
+
 
               <div class="form-group">
-                <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2">Submit</button>
-
+                <button type="submit" class="btn btn-lightning rounded-0 mb-2 mr-2">Submit</button>
               </div>
             </form>
           </div>
