--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -39,18 +39,18 @@
         </a>
       </li>
       <li>
-          <a href="#" routerLink="/forms" routerLinkActive="active">
+          <a href="#" routerLink="/addcompte" routerLinkActive="active">
             <i class="fas fa-money-check"></i>
             <span>Ajouter Compte</span>
           </a>
         </li>
       <li>
-        <a href="#" routerLink="/tables" routerLinkActive="active">
+        <a href="#" routerLink="/listepartenaire" routerLinkActive="active">
           <i class="fa fa-table"></i>
           <span>Liste des Partenaires</span>
         </a>
       </li>
-     
+
       <li>
         <a href="#" routerLink="/maps" routerLinkActive="active">
           <i class="fa fa-globe"></i>
