--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,4 +1,7 @@
+
 <div class="container" id="singin">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
   <div class="row">
  <div class="col-lg-4"> </div>
  <div class="col-lg-8">
@@ -30,6 +33,7 @@
       </div>
  </div>
 </div>
-
+<app-footer></app-footer>
+<router-outlet></router-outlet>
 </div>
 
