--- a/src/app/envoi/envoi.component.html
+++ b/src/app/envoi/envoi.component.html
@@ -4,7 +4,7 @@
   <main>
     <app-sidebaruser></app-sidebaruser>
     <div class="pages container-fluid pt-4 pb-4 pl-4 pr-4 ">
-      <h4 class="mb-4 text-muted"> Ajouter un Super Admin ou Caissier</h4>
+      <h4 class="mb-4 text-muted"> Evoie</h4>
 
 
   <div class="row">
@@ -12,49 +12,80 @@
 
         <div class="card border-0 rounded-0">
           <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                  placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label>Custom file input</label>
-                <div class="custom-file">
-                  <input type="file" class="custom-file-input" id="customFile">
-                  <label class="custom-file-label rounded-0" for="customFile">Choose file</label>
+
+
+              <div>
+
+                  <h4 class="mb-4 text-muted">Forms </h4>
+
+                  <div class="row">
+                    <div class="col-md-12 col-lg-6 mb-4 align-items-stretch">
+                      <div class="card border-0 rounded-0 h-100">
+                        <div class="card-title mb-1 p-3">
+                          <h5>Basic Form</h5>
+                        </div>
+                        <div class="card-body">
+                          <form>
+                            <div class="form-group">
+                              <label for="exampleFormControlInput1">NINEA</label>
+                              <input type="texte" class="form-control  rounded-0" name="ninea" #ninea ngModel required="required"
+                                placeholder="NINEA" >
+                            </div>
+
+                            <div class="form-group">
+                              <label for="exampleFormControlInput1">NINEA</label>
+                              <input type="texte" class="form-control  rounded-0" name="ninea" #ninea ngModel required="required"
+                                placeholder="NINEA" >
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleFormControlInput1">NINEA</label>
+                              <input type="texte" class="form-control  rounded-0" name="ninea" #ninea ngModel required="required"
+                                placeholder="NINEA" >
+                            </div>
+
+                            <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2">Submit</button>
+
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6 mb-4 align-items-stretch">
+                      <div class="card border-0 rounded-0 h-100">
+                        <div class="card-title mb-1 p-3">
+                          <h5>Horizontal Form</h5>
+                        </div>
+                        <div class="card-body">
+                          <form>
+
+
+                            <div class="form-group">
+                              <label for="exampleFormControlInput1">NINEA</label>
+                              <input type="texte" class="form-control  rounded-0" name="ninea" #ninea ngModel required="required"
+                                placeholder="NINEA" >
+                            </div>
+
+                            <div class="form-group">
+                              <label for="exampleFormControlInput1">NINEA</label>
+                              <input type="texte" class="form-control  rounded-0" name="ninea" #ninea ngModel required="required"
+                                placeholder="NINEA" >
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleFormControlInput1">NINEA</label>
+                              <input type="texte" class="form-control  rounded-0" name="ninea" #ninea ngModel required="required"
+                                placeholder="NINEA" >
+                            </div>
+
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
+
+
                 </div>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlSelect1">Example select</label>
-                <select class="form-control rounded-0" id="exampleFormControlSelect1">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlSelect2">Example multiple select</label>
-                <select multiple class="form-control rounded-0" id="exampleFormControlSelect2">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlTextarea1">Example textarea</label>
-                <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
 
-              <div class="form-group">
-                <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2">Submit</button>
-
-              </div>
-            </form>
           </div>
         </div>
       </div>
