--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,79 +6,76 @@
       <h4 class="mb-4 text-muted"> Ajouter un Super Admin ou Caissier</h4>
 
 
-  <div class="row">
-      <div class="col-md-12 mb-4 ">
+      <div class="row">
+        <div class="col-md-12 mb-4 ">
 
-        <div class="card border-0 rounded-0">
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                  placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                  placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                  placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                  placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                  placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                  placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                  placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label>Custom file input</label>
-                <div class="custom-file">
-                  <input type="file" class="custom-file-input" id="customFile">
-                  <label class="custom-file-label rounded-0" for="customFile">Choose file</label>
+          <div class="card border-0 rounded-0">
+            <div class="card-body">
+              <form #imageForm=ngForm (ngSubmit)="onsubmit(imageForm.value)">
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Nom complet de l'Admine</label>
+                  <input type="name" class="form-control  rounded-0" id="exampleFormControlInput1"
+                    placeholder="Nom complet de l'Admine" name="nom" ngModel>
                 </div>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlSelect1">Example select</label>
-                <select class="form-control rounded-0" id="exampleFormControlSelect1">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </div>
+
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Telephone</label>
+                  <input type="number" #telephone ngModel required="required" min=700000000 max=800000000
+                    name="telephone" class="form-control  rounded-0" id="exampleFormControlInput1"
+                    placeholder="Telephone" name="telephone">
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Email address</label>
+                  <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
+                    placeholder="name@example.com" name="email" ngModel>
+                </div>
+
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Login</label>
+                  <input type="text" #login ngModel required="required" name="login" class="form-control" id="username"
+                    class="form-control  rounded-0" placeholder="Login">
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Password</label>
+                  <input type="password" class="form-control  rounded-0" id="exampleFormControlInput1"
+                    placeholder="Password" name="password" ngModel>
+                </div>
 
 
-              <div class="form-group">
-                <button type="submit" class="btn btn-lightning rounded-0 mb-2 mr-2">Submit</button>
-              </div>
-            </form>
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Role</label>
+                  <select class="form-control" #Profil ngModel name="Profil">
+                    <option *ngFor="let pr of profils" value="{{pr.id}}">{{pr.libelle}}</option>
+                  </select>
+                </div>
+
+                <div class="form-group">
+                  <div class="col">
+                    <img alt="" [src]="imageUrl" style="width: 250px; height:200px">
+
+                  </div>
+                  <label>Photo</label>
+                  <div class="custom-file">
+                    <input input name="photo" #photo ngModel type="file" #Image accept="image/"
+                      (change)="handleFileInput($event.target.files)" class="custom-file-input">
+                    <label class="custom-file-label rounded-0" for="customFile">Photo</label>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <button type="submit" [disabled]="Image.value=='' || !imageForm.valid"
+                    class="btn btn-lightning rounded-0 mb-2 mr-2">Ajouter</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
       <router-outlet></router-outlet>
       <hr>
       <app-footer></app-footer>
     </div>
-    <div class="overlay" ></div>
+    <div class="overlay"></div>
   </main>
 </div>
