--- a/src/app/components/sidebarcaissier/sidebarcaissier.component.html
+++ b/src/app/components/sidebarcaissier/sidebarcaissier.component.html
@@ -20,14 +20,14 @@
       </div>
       <ul class="menu-items">
         <li >
-          <a href="#" routerLink="/dashboard" routerLinkActive="active">
+          <a href="#" routerLink="/depot" routerLinkActive="active">
             <i class="fa fa-tv"></i>
             <span>Faire un Depot</span>
             <span class="badge badge-warning rounded-0 text-dark p-1">NEW</span>
           </a>
         </li>
         <li >
-            <a href="#" routerLink="/dashboard" routerLinkActive="active">
+            <a href="#" routerLink="/depot" routerLinkActive="active">
               <i class="fa fa-tv"></i>
               <span>Historique</span>
               <span class="badge badge-warning rounded-0 text-dark p-1">NEW</span>
