--- a/src/app/components/sidebaradminp/sidebaradminp.component.html
+++ b/src/app/components/sidebaradminp/sidebaradminp.component.html
@@ -19,44 +19,26 @@
       Liste des Services
     </div>
     <ul class="menu-items">
-      <li >
-        <a href="#" routerLink="/dashboard" routerLinkActive="active">
-          <i class="fa fa-tv"></i>
-          <span>Tableau de Bord</span>
-          <span class="badge badge-warning rounded-0 text-dark p-1">NEW</span>
-        </a>
-      </li>
+
       <li>
-        <a href="#" routerLink="/register" routerLinkActive="active">
-          <i class="fas fa-gem"></i>
+        <a href="#" routerLink="/addpartanduser" routerLinkActive="active">
+          <i class="fas fa-money-check-alt"></i>
           <span>Ajouter Admin ou User</span>
         </a>
       </li>
       <li>
-          <a href="#" routerLink="/forms" routerLinkActive="active">
+          <a href="#" routerLink="/comptespartnaire" routerLinkActive="active">
             <i class="fas fa-gem"></i>
             <span> Compte</span>
           </a>
         </li>
       <li>
-        <a href="#" routerLink="/tables" routerLinkActive="active">
+        <a href="#" routerLink="/userpartenaire" routerLinkActive="active">
           <i class="fa fa-table"></i>
           <span> Liste des Users</span>
         </a>
       </li>
 
-      <li>
-        <a href="#" routerLink="/maps" routerLinkActive="active">
-          <i class="fa fa-globe"></i>
-          <span>Localisation </span>
-        </a>
-      </li>
-      <li>
-        <a href="#" routerLink="/notifications" routerLinkActive="active">
-          <i class="fas fa-bell"></i>
-          <span>Notifications</span>
-        </a>
-      </li>
     </ul>
 
     <div class="view-source mb-3">
