--- a/src/app/components/sidebaruser/sidebaruser.component.html
+++ b/src/app/components/sidebaruser/sidebaruser.component.html
@@ -20,43 +20,38 @@
     </div>
     <ul class="menu-items">
       <li >
-        <a href="#" routerLink="/dashboard" routerLinkActive="active">
+        <a href="#" routerLink="/compteuser" routerLinkActive="active">
           <i class="fa fa-tv"></i>
           <span>Compte</span>
           <span class="badge badge-warning rounded-0 text-dark p-1">NEW</span>
         </a>
       </li>
       <li>
-        <a href="#" routerLink="/register" routerLinkActive="active">
+        <a href="#" routerLink="/envoi" routerLinkActive="active">
           <i class="fas fa-gem"></i>
           <span>Envoi</span>
         </a>
       </li>
       <li>
-          <a href="#" routerLink="/forms" routerLinkActive="active">
+          <a href="#" routerLink="/retrait" routerLinkActive="active">
             <i class="fas fa-gem"></i>
             <span>Retrait</span>
           </a>
         </li>
+        <li>
+          <a href="#" routerLink="/rembousement" routerLinkActive="active">
+            <i class="fas fa-gem"></i>
+            <span>Rembousement</span>
+          </a>
+        </li>
+
       <li>
-        <a href="#" routerLink="/tables" routerLinkActive="active">
+        <a href="#" routerLink="/transactions" routerLinkActive="active">
           <i class="fa fa-table"></i>
-          <span> Liste des Transactions</span>
+          <span> Transactions</span>
         </a>
       </li>
 
-      <li>
-        <a href="#" routerLink="/maps" routerLinkActive="active">
-          <i class="fa fa-globe"></i>
-          <span>Localisation </span>
-        </a>
-      </li>
-      <li>
-        <a href="#" routerLink="/notifications" routerLinkActive="active">
-          <i class="fas fa-bell"></i>
-          <span>Notifications</span>
-        </a>
-      </li>
     </ul>
     <div class="view-source mb-3">
       <a (click)="logOut()" class="btn btn-block btn-lightning rounded-0">Deconnecxion</a>
