--- a/src/app/depot/depot.component.html
+++ b/src/app/depot/depot.component.html
@@ -1,57 +1,34 @@
-
 <div class="wrapper default-theme">
-    <app-navbar></app-navbar>
-    <main>
-      <app-sidebarcaissier></app-sidebarcaissier>
-      <div class="pages container-fluid pt-4 pb-4 pl-4 pr-4 ">
-        <h4 class="mb-4 text-muted"> Ajouter un Super Admin ou Caissier</h4>
+  <app-navbar></app-navbar>
+  <main>
+    <app-sidebarcaissier></app-sidebarcaissier>
+    <div class="pages container-fluid pt-4 pb-4 pl-4 pr-4 ">
+      <h4 class="mb-4 text-muted"> Ajouter un Super Admin ou Caissier</h4>
 
 
-    <div class="row">
+      <div class="row">
         <div class="col-md-12 mb-4 ">
 
           <div class="card border-0 rounded-0">
             <div class="card-body">
-              <form>
+              <form #imageForm=ngForm (ngSubmit)="onsubmit(imageForm.value)" >
                 <div class="form-group">
-                  <label for="exampleFormControlInput1">Email address</label>
-                  <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                    placeholder="name@example.com">
+                  <label for="exampleFormControlInput1">Montant</label>
+                  <input type="number" class="form-control  rounded-0" id="exampleFormControlInput1"
+                    placeholder="000000 XOF" ngModel #montant name="montant">
                 </div>
                 <div class="form-group">
-                  <label>Custom file input</label>
+                  <label> Numero de Compte</label>
                   <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="customFile">
-                    <label class="custom-file-label rounded-0" for="customFile">Choose file</label>
+                    <label for="exampleInputEmail1">Selectionner un  Numero de Compte</label>
+                    <select class="form-control" #partenaire ngModel name="partenaire">
+                      <option *ngFor="let p of depot " value="{{p.id}}">{{p.numerocompte}}</option>
+                    </select>
+
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlSelect1">Example select</label>
-                  <select class="form-control rounded-0" id="exampleFormControlSelect1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect2">Example multiple select</label>
-                  <select multiple class="form-control rounded-0" id="exampleFormControlSelect2">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Example textarea</label>
-                  <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-
-                <div class="form-group">
-                  <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2">Submit</button>
+                  <button type="submit" class="btn btn-lightning rounded-0 mb-2 mr-2">Ajouter</button>
 
                 </div>
               </form>
@@ -60,10 +37,10 @@
         </div>
       </div>
 
-        <router-outlet></router-outlet>
-        <hr>
-        <app-footer></app-footer>
-      </div>
-      <div class="overlay" ></div>
-    </main>
-  </div>
+      <router-outlet></router-outlet>
+      <hr>
+      <app-footer></app-footer>
+    </div>
+    <div class="overlay"></div>
+  </main>
+</div>
