--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,7 +3,7 @@
   <main>
     <app-sidebar></app-sidebar>
     <div class="pages container-fluid pt-4 pb-4 pl-4 pr-4 ">
-      <h4 class="mb-4 text-muted"> Ajouter un Super Admin ou Caissier</h4>
+      <h4 class="mb-4 text-muted"> Ajouter utilisateur ou Admin </h4>
 
 
       <div class="row">
@@ -44,7 +44,7 @@
 
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Role</label>
-                  <select class="form-control" #Profil ngModel name="Profil">
+                  <select class="form-control" #Profile ngModel name="Profile">
                     <option *ngFor="let pr of profils" value="{{pr.id}}">{{pr.libelle}}</option>
                   </select>
                 </div>
