--- a/src/app/listepartenaire/listepartenaire.component.html
+++ b/src/app/listepartenaire/listepartenaire.component.html
@@ -21,7 +21,7 @@
           <!-- raisonsociale Column -->
           <ng-container matColumnDef="raisonsociale">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> raisonsociale </th>
-            <td mat-cell *matCellDef="let row"> {{row.raisonsociale}}% </td>
+            <td mat-cell *matCellDef="let row"> {{row.raisonsociale}} </td>
           </ng-container>
 
           <!-- ninea Column -->
@@ -37,14 +37,10 @@
 
           <ng-container matColumnDef="statut">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> statut </th>
-            <td mat-cell *matCellDef="let row"> {{row.statut}} </td>
+            <td mat-cell *matCellDef="let row"><button (click)="blocker(row.id)"  class="btn btn-success" > {{row.statut}} </button> </td>
           </ng-container>
 
           <!-- Color Column -->
-          <ng-container matColumnDef="color">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
-            <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
-          </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;">
